# asterisk-ari-client-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ari_client/: __init__.py  ari_client.py  controller.py
ari_client/models/: bridge.py  channels.py  events.py
examples/: simple.py
tests/: conftest.py  test_smoke.py
